--- a/index.html
+++ b/index.html
@@ -7,17 +7,20 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <div>
-      <div id="tv">
-        Select a channel to get started
-      </div>
 
       <!-- Channel Buttons Go Here -->
       <div id="channels">
-        <!-- Remove me! -->
-        <button>Channel Button</button>
+        <button onClick="setvideo('https://www.youtube.com/embed/5m14CQFtNi8')">ted lasso</button>
       </div>
-    </div>
+      </div>
+      <div id="2-channel">
+        <button>music</button>
+      </div>
+      </div>
+      <div id="3-channel">
+        <button>apartments</button>
+      </div>
+      </div>
     
     <script src="script.js"></script>
   </body>
